[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/Amoeba/spritesheet-small.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/scaryEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/audio/567892__merrick079__scream.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/characters/scareEnemyBody.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 2, 2, 12 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 2, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 1.5, 0.5 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("enemyArea/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "loop"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("enemyArea/Sprite3D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="scaryEnemy" type="Spatial"]
script = ExtResource( 2 )

[node name="playerArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="playerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 11 )
shape = SubResource( 1 )

[node name="RayCast" type="RayCast" parent="playerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 24 )

[node name="RayCast2" type="RayCast" parent="playerArea"]
transform = Transform( 0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 24 )

[node name="RayCast3" type="RayCast" parent="playerArea"]
transform = Transform( 0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, 24 )

[node name="enemyArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="enemyArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="enemyArea"]
transform = Transform( 0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 2, 0 )
texture = ExtResource( 1 )
vframes = 6

[node name="scareEnemyBody" type="KinematicBody" parent="enemyArea" groups=["boss"]]
script = ExtResource( 4 )

[node name="CollisionShape2" type="CollisionShape" parent="enemyArea/scareEnemyBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "loop"
anims/RESET = SubResource( 3 )
anims/loop = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0

[node name="scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "sfx"

[connection signal="body_entered" from="playerArea" to="." method="_on_playerArea_body_entered"]
[connection signal="body_entered" from="enemyArea" to="." method="_on_enemyArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
